Fixed positioning, text wrapping/responsiveness

--- a/src/app/heroSection.css
+++ b/src/app/heroSection.css
@@ -8,6 +8,7 @@ html {
 
 /* Base styles for the hero section */
 .hero-section {
+  top: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,6 +16,8 @@ html {
   height: 100vh;
   color: black;
   position: relative;
+  width: 100%;
+  margin-bottom: 120px;
 }
 
 /* Centered content container */
@@ -28,11 +31,28 @@ html {
   z-index: 2;
 }
 
+.title-s2 {
+  line-height: 1.3 !important;
+}
+
+.title-h1 {
+  line-height: 1.3 !important;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(90deg, #583afe 0%, #ea0038 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.title-span-non {
+  background: transparent;
+  -webkit-text-fill-color: initial;
+}
+
 .backdrop {
   position: absolute;
-  z-index: 0; /* Below content */
+  z-index: 0;
   display: block;
-  width: 15%; /* Responsive size */
 
   transition: transform 0.3s ease-in-out;
 }
@@ -43,48 +63,56 @@ html {
 
 .board {
   transform: rotate(-18deg);
-  /* Use percentage (%) for left property to make it relative to the container's width */
-  left: 10%; /* Adjust as needed */
-  top: 5%; /* Adjust as needed */
+
+  left: 23%;
+  top: 5%;
   max-width: 180px;
 }
 
 .study {
   transform: rotate(10deg);
-  top: 10%;
-  left: 70%; /* Adjust as needed */
+  top: 6%;
+  right: 10%;
   max-width: 200px;
 }
 
 .trophy {
   transform: rotate(20deg);
-  top: 70%;
-  left: 55%; /* Adjust as needed */
+  bottom: 3%;
+  left: 55%;
   max-width: 184px;
 }
 
 .card {
-  top: 60%;
-  left: 15%; /* Adjust as needed */
+  bottom: 6%;
+  left: 15%;
   max-width: 180px;
 }
 
 .star {
   top: 34%;
-  left: 11%; /* Adjust as needed */
+  left: -3%;
   max-width: 94px;
 }
 
 .calculator {
-  transform: rotate(-30deg); /* Correct the rotation */
+  transform: rotate(-30deg); 
   top: 42%;
-  left: 67%; /* Adjust as needed */
+  right: 0%;
   max-width: 180px;
 }
 @media (max-width: 768px) {
   .backdrop {
-    /* Scale down icons */
     transform: scale(0.8);
+  }
+  .calculator {
+    transform: rotate(-30deg) scale(0.8);
+  }
+  .board {
+    transform: rotate(-18deg) scale(0.8);
+  }
+  .trophy {
+    transform: rotate(20deg) scale(0.8);
   }
 }
 
@@ -95,6 +123,10 @@ html {
 
   .content-container {
     width: 100%;
+  }
+  .subtitle {
+    max-width: 75%;
+    white-space: normal;
   }
 }
 
@@ -131,5 +163,18 @@ html {
   }
   100% {
     transform: rotate(0deg);
+  }
+}
+
+@media (min-width: 1144px) {
+  .title-span {
+    display: block; /* Stack the spans on separate lines */
+  }
+}
+
+/* And for greater than 935px */
+@media (max-width: 1144px) {
+  .title-span {
+    display: inline; /* Keep the spans on the same line */
   }
 }
